--- a/client/partials/ranking.html
+++ b/client/partials/ranking.html
@@ -5,7 +5,7 @@
       Ranking - {{numberOfPlayers}} player(s)
     </a>
     {{#each players}}
-      <a href="#" class="item item-icon-left">
+      <a href="#" class="item item-icon-left bg-effect">
         <i class="icon ion-thumbsup"></i>
         {{name}}
         <span class="badge badge-assertive">{{clicks}}</span>
