--- a/client/partials/gameboard.html
+++ b/client/partials/gameboard.html
@@ -1,8 +1,16 @@
 <template name="gameboard">
   <div class="list padding">
-    <h3 class="text-center dark" data-status>DALE! DALE BOMBA!</h3>
-    <button class="button button-assertive button-large button-block" data-click>
-      CLICA NESSA BOMBA!
+    <h3 class="text-center dark">
+      <i class="ion-speedometer bg-icon"></i>
+      <br>
+      {{clickStatus}}
+    </h3>
+    <button class="button button-assertive button-xlarge button-block ion-android-sunny" data-click>
+      {{#if totalOfClicks}}
+        {{totalOfClicks}} CLICKS
+      {{else}}
+        CLICA NESSA BOMBA!
+      {{/if}}
     </button>
     <audio src="/sounds/click.mp3" preload="auto" data-mp3></audio>
     <audio src="/sounds/click.ogg" preload="auto" data-ogg></audio>
