fix bg-icon size

--- a/client/partials/welcome.html
+++ b/client/partials/welcome.html
@@ -7,7 +7,7 @@
   <form class="list padding">
     <label class="item item-input item-stacked-label">
       <span class="input-label">Nome</span>
-      <input type="text" maxlength="20" placeholder="Qual é seu nome?">
+      <input type="text" maxlength="20" placeholder="Digite seu nome para jogar!">
     </label>
     <br>
     <button class="button button-balanced button-large button-block ion-play">
