--- a/client/partials/rankingList.html
+++ b/client/partials/rankingList.html
@@ -1,10 +1,10 @@
-<template name="ranking">
+<template name="rankingList">
   <div class="list">
     <a href="#" class="item text-center">
       Ranking - {{numberOfPlayers}} player(s)
     </a>
     {{#each players}}
-      <a href="#" class="item item-icon-left bg-effect">
+      <a href="#" data-player-id="{{_id}}" class="item item-icon-left bg-effect">
         <i class="icon ion-thumbsup"></i>
         {{name}}
         <span class="badge badge-assertive">{{clicks}}</span>
