--- a/client/partials/rankingList.html
+++ b/client/partials/rankingList.html
@@ -7,7 +7,7 @@
       <a href="#" data-player-id="{{_id}}" class="item item-icon-left bg-effect">
         <i class="icon ion-thumbsup"></i>
         {{name}}
-        <span class="badge badge-assertive">{{clicks}}</span>
+        <span class="badge badge-assertive">{{c}}</span>
       </a>
     {{/each}}
   </div>
