--- a/client/partials/waiting.html
+++ b/client/partials/waiting.html
@@ -6,6 +6,8 @@
       {{numberOfPlayers}} player(s) conectados
       <br>
       Aguarde o início do jogo...
+      <br>
+      Em {{timeWaiting}} segundos
     </h4>
     <br>
     <button class="button button-assertive button-large button-block ion-close-circled" data-cancel>
