--- a/client/partials/ranking.html
+++ b/client/partials/ranking.html
@@ -1,12 +1,8 @@
 <template name="ranking">
   <div class="list">
-    <a href="#" class="item text-center">
-      Ranking - {{numberOfPlayers}} player(s)
-    </a>
     {{#each players}}
-      <a class="item item-icon-left bg-effect {{playerHighlight _id}}">
-        <i class="icon ion-thumbsup"></i>
-        {{name}}
+      <a class="item bg-effect {{highlight}}">
+        {{position}}˚ - {{name}}
         <span class="badge badge-assertive">{{c}}</span>
       </a>
     {{/each}}
